# btcat-image-filter

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  effect.sh  generate-examples.sh  main.py  pyproject.toml  test.sh  tui.py
.claude/: settings.json
.github/workflows/: test.yml
btcat_images/: cli.py  constants.py
btcat_images/core/: pipeline.py  utils.py
btcat_images/processing/: masks.py
btcat_images/processing/dither/: __init__.py  atkinson.py  floyd_steinberg.py  hal.py  ordered.py
btcat_images/processing/filters/: glitch.py
btcat_images/tui/: app.py  screens.py
tests/: test_glitch.py  test_tui.py
