[project]
name = "btcat-img-dither"
version = "0.1.0"
description = "Image dithering tool that applies monochrome dithering to a portion of an image"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Harald Schilly", email = "hsy@bitcoin-austria.at" }
]
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
    "numba>=0.60.0",
]

[project.scripts]
btcat-dither = "main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
]
